# Project_1_431

./: README.md
_build/: .db  .digest-db  log
_build/.aliases/default/: all-00000000000000000000000000000000
_build/.aliases/default/project1/lib/: all-00000000000000000000000000000000
_build/.aliases/default/project1/test/: all-00000000000000000000000000000000
_build/default/: README.md
_build/default/project1/lib/: project1.cma
_build/default/project1/lib/.merlin-conf/: lib-project1
_build/default/project1/lib/.project1.objs/byte/: project1.cmo  project1.cmt
_build/default/project1/test/: project1.bc
_build/default/project1/test/.merlin-conf/: exe-project1
_build/default/project1/test/.project1.eobjs/byte/: dune__exe__Project1.cmi  dune__exe__Project1.cmo  (+1 more)
_build/install/default/lib/project1/: META  dune-package  opam
project1/: dune-project  kanpilot.toml  project1.opam
project1/_build/: .db  .digest-db  log
project1/_build/default/: project1.dune-package  project1.install  project1.opam
project1/_build/default/.dune/: configurator  configurator.v2
project1/_build/default/lib/: project1.cma
project1/_build/default/lib/.merlin-conf/: lib-project1
project1/_build/default/lib/.project1.objs/byte/: project1.cmo  project1.cmt
project1/_build/default/test/: project1.bc
project1/_build/default/test/.merlin-conf/: exe-project1
project1/_build/default/test/.project1.eobjs/byte/: dune__exe__Project1.cmi  dune__exe__Project1.cmo  dune__exe__Project1.cmt
project1/_build/default/test/.project1.eobjs/native/: dune__exe__Project1.cmx
(+1 files in other folders)
