(lang dune 2.9)

(name project1)

(generate_opam_files true)

(source
 (github Beckyono/Project_1_431))

(authors "Brandon Fischer, Kevin Ryan, Rebecca Ostrander")

(maintainers "Maintainers -> Brandon Fischer, Kevin Ryan, Rebecca Ostrander")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name project1)
 (synopsis "A guestbook form")
 (description "A guestbook form that allows users to input their name, check in date, check out date, rating for the hotel, and any additional comments.")
 (depends ocaml dune dream)
 (tags
  (topics "ocaml" "web" "dream" "dune")))